# task-manager

./: .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  setup.cfg
.github/workflows/: continious-integration.yml
docker/: Dockerfile
locale/ru/LC_MESSAGES/: django.mo  django.po
static/: script.js
staticfiles/: script.js
task_manager/: settings.py  urls.py  views.py
task_manager/apps/labels/: admin.py  models.py
task_manager/apps/statuses/: admin.py  models.py  views.py
task_manager/apps/tasks/: admin.py  models.py
task_manager/apps/users/: forms.py  views.py
task_manager/fixtures/: test_tasks.json  test_users.json  users.json
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_options.py
task_manager/service_mixins/: permissions.py
task_manager/service_tools/: data_loader.py  filters.py  permissions.py
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_membership_label.py  0002_alter_task_options.py  0003_alter_membership_task.py  0003_rename_label_task_label_set_alter_membership_label.py  0004_alter_task_label_set.py
task_manager/templates/: basement.html  login.html  start_page.html
task_manager/templates/components/: language_selector.html  navbar.html  navigation_logged.html  navigation_unlogged.html
task_manager/templates/labels/: create.html  delete.html  index.html  update.html
task_manager/templates/status/: create.html  delete.html  index.html  update.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  index.html  (+1 more)
task_manager/tests/: test_labels.py  test_statuses.py  test_tasks.py  test_users.py
task_manager/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+8 files in other folders)
