[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Task manager"
authors = ["bogdan <telioko@tutanota.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
Django = "^5.0.2"
python-dotenv = "^1.0.1"
dj-database-url = "^2.1.0"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.4"
whitenoise = "^6.6.0"
psycopg2-binary = "^2.9.9"
django-filter = "^23.5"
rollbar = "^0.16.3"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
ipython = "^8.22.1"
coverage = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
